--- a/themes/academydeliver/scss/template/_blog.scss
+++ b/themes/academydeliver/scss/template/_blog.scss
@@ -162,7 +162,7 @@ div#breadcrumbs {
     background-color: $secondary-bg;
 
     @include breakpoint(mobile-only) {
-        margin: 0 1rem 0 0;
+        margin: 0;
     }
     .sidebar-content {
 
@@ -174,6 +174,9 @@ div#breadcrumbs {
             margin-top: 1rem;
         }
         margin-bottom: $padding-vert;
+        @include breakpoint(mobile-only) {
+            margin-bottom: 0;
+        }
     }
 }
 
